feat(controls): Add Settings menu to Model3D

--- a/src/i18n/en-US.properties
+++ b/src/i18n/en-US.properties
@@ -154,14 +154,40 @@ auto_generated=Auto-Generated
 # 3D Preview
 # Button tooltip for showing/hiding the list of animation clips
 box3d_animation_clips=Animation clips
+# Settings camera projection listbox item value: Perspective
+box3d_camera_projection_perspective=Perspective
+# Settings camera projection listbox item value: Orthographic
+box3d_camera_projection_orthographic=Orthographic
 # Button tooltip for resetting all user modified settings in the control bar and Settings panel, to their defaults. This includes render mode, rotation, camera position
 box3d_reset=Reset
 # Button tooltip for playing and pausing animations
 box3d_toggle_animation=Play/pause animation
 # Button tooltip for toggling VR display mode in any 3D preview
 box3d_toggle_vr=Toggle VR display
+# Settings render mode listbox item value: Lit
+box3d_render_mode_lit=Lit
+# Settings render mode listbox item value: Unlit
+box3d_render_mode_unlit=Unlit
+# Settings render mode listbox item value: Normals
+box3d_render_mode_normals=Normals
+# Settings render mode listbox item value: Shape
+box3d_render_mode_shape=Shape
+# Settings render mode listbox item value: UV Overlay
+box3d_render_mode_uv_overlay=UV Overlay
 # Settings
 box3d_settings=Settings
+# Settings render mode label
+box3d_settings_render_label=Render mode
+# Settings show grid label
+box3d_settings_grid_label=Show grid
+# Settings show wireframes label
+box3d_settings_wireframes_label=Show wireframes
+# Settings show skeletons label
+box3d_settings_skeletons_label=Show skeletons
+# Settings camera projection label
+box3d_settings_projection_label=Camera Projection
+# Settings rotate model label
+box3d_settings_rotate_label=Rotate Model
 
 # Annotations
 # Placeholder text for create textarea in annotation dialog
